 * `MDNotifyCmd` is now called for each domain that has been successfully renewed. Not for 
   all Managed Domains after all have been processed. This gives notifications earlier.
   Notification errors are now also collected under MD status and notifications are retried
   with backoff delays.
 * New directive `MDServerStatus` to control if Managed Domains are listed in Apache's 
  `server-status` handler or not. Default yes.
 * New dorective `MDCertificateStatus` to control if JSON certificate information on a domain
   should be made available on https://<domain>/.httpd/certificate-status or not. Default yes.

v2.0.4
----------------------------------------------------------------------------------------------------
 * Updated README.md with new directives and howto.
 * New directives "MDCertificateFile" and "MDCertificateKeyFile" that allow defining
   Managed Domains for certificates coming from somewhere else. 
 * "MDRenewMode" is the new name of "MDDriveMode" (which is still available for 
   backward compatibility). This should make it easier to understand what it does.
 * Removing some fields form the store MD JSON, now that we can inspect the pubcert itself
   all the time. Less store updates.
 * Dropped support for the pre-v1.x function that mod_ssl used in ancient patches.
 * public cert chain now gets cached in memory before server drops privileges, so we always
   have access to it. Allowed to drop some pre-computed values such as the SHA256 fingerprint.
 * Adding "<MDomain name>" as a shortcut to "<MDomainSet name>". It just reads that much better.
 * More "how to"s in README.md
 * `MDPortMap` directive now also accepts `http` and `https` as external ports. `http:8888` would 
   mean that http requests from the internet arrive on local port 8888.
 * Started "how to"s in README.md
 * MDRequireHttps handler now runs after mod_ssl, so that it can report SSL errors before.