@@ -110,6 +110,7 @@
 		B298D5C4229E7BF000245316 /* md_result.h */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.c.h; path = md_result.h; sourceTree = "<group>"; };
 		B298D5C5229E7BF000245316 /* md_result.c */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.c.c; path = md_result.c; sourceTree = "<group>"; };
 		B298D5CC229E8AA600245316 /* main.c */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.c.c; path = main.c; sourceTree = "<group>"; };
+		B29B931422B8D57D00CF8640 /* notifail.py */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.script.python; path = notifail.py; sourceTree = "<group>"; };
 		B2A93D122292D7A400BC6339 /* httpd.conf.in */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = httpd.conf.in; sourceTree = "<group>"; };
 		B2A93D132297E14600BC6339 /* test_0910_cleanups.py */ = {isa = PBXFileReference; lastKnownFileType = text.script.python; path = test_0910_cleanups.py; sourceTree = "<group>"; };
 		B2B330051F39E1D300579179 /* md_acme_acct.c */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.c; path = md_acme_acct.c; sourceTree = "<group>"; };
@@ -402,6 +403,7 @@
 				B2C1BE092201F728002EF7B4 /* dns01.py */,
 				B2B81ED31F165F8300E35CA3 /* htdocs */,
 				B2B81E931F0BB4F300E35CA3 /* Makefile.am */,
+				B29B931422B8D57D00CF8640 /* notifail.py */,
 				B2CE87C51F8E28EA000629B2 /* notify.py */,
 				B20333361EDDA82300E5BE7E /* test_0001_store.py */,
 				B2FB5A431F57087400856773 /* test_0010_store_migrate.py */,
