@@ -1,0 +1,12 @@
+#!/usr/bin/env python
+
+import os
+import sys
+
+def main(argv):
+    if len(argv) > 2:
+        sys.exit(1)
+    
+if __name__ == "__main__":
+    main(sys.argv)
+
